# cloud-hypervisor

./: Cargo.toml  build.rs  es-metadata.yml
.github/workflows/: build.yaml  ci.yaml  cross-build.yaml  mshv-integration.yaml  quality.yaml
.pipelines/: build.yml  stagingbuild.yml
.pipelines/templates/: ubuntu-20.04-build.yml
api_client/src/: lib.rs
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: fdt.rs  layout.rs  mod.rs
arch/src/aarch64/gic/: gicv2.rs  mod.rs
arch/src/x86_64/: gdt.rs  interrupts.rs  mod.rs  mptable.rs  regs.rs
arch/src/x86_64/tdx/: mod.rs
block/src/: async_io.rs  fixed_vhd_async.rs  lib.rs  qcow_async.rs  qcow_sync.rs  raw_async.rs  raw_async_aio.rs  raw_sync.rs  vhdx_sync.rs
block/src/qcow/: mod.rs  qcow_raw_file.rs  raw_file.rs
block/src/vhdx/: mod.rs  vhdx_bat.rs  vhdx_header.rs  vhdx_io.rs  vhdx_metadata.rs
block_util/: Cargo.toml
block_util/src/: lib.rs
cloud-hypervisor/src/: main.rs
cloud-hypervisor/tests/: integration.rs
cloud-hypervisor/tests/common/: utils.rs
devices/: Cargo.toml
devices/src/: acpi.rs  gic.rs  ioapic.rs  pvmemcontrol.rs
devices/src/legacy/: cmos.rs
docs/: testing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: balloon.rs  console.rs  http_api.rs  iommu.rs  linux_loader_cmdline.rs  mem.rs  net.rs  rng.rs
hypervisor/: Cargo.toml
hypervisor/src/: bindings.rs  common.rs  cpu.rs  cpuidpatch.rs  hv.rs  hypervisor.rs  kvm.rs  lib.rs  params.rs  regs.rs  vm.rs  wrapper.rs
hypervisor/src/aarch64/: mod.rs
hypervisor/src/arch/aarch64/: gic.rs  regs.rs
hypervisor/src/arch/x86/emulator/: mod.rs
hypervisor/src/arch/x86/emulator/instructions/: and.rs  cmp.rs  mod.rs
hypervisor/src/kvm/: mod.rs
hypervisor/src/kvm/aarch64/: mod.rs
hypervisor/src/kvm/x86_64/: mod.rs
hypervisor/src/mshv/: bitmap.rs  mod.rs
hypervisor/src/mshv/aarch64/gic/: mod.rs
hypervisor/src/mshv/x86_64/: emulator.rs  mod.rs
hypervisor/src/x86/: mod.rs
hypervisor/src/x86_64/: mod.rs
net_util/: Cargo.toml
net_util/src/: ctrl_queue.rs  mac.rs  open_tap.rs  queue_pair.rs  tap.rs
pci/src/: bus.rs  configuration.rs  lib.rs  msix.rs  vfio.rs  vfio_user.rs
performance-metrics/: Cargo.toml
performance-metrics/src/: main.rs  performance_tests.rs
rate_limiter/src/: group.rs  lib.rs
scripts/: common-aarch64.sh  dev_cli.sh  fetch_workloads.py  run_integration_tests_aarch64.sh  run_integration_tests_cvm.sh  run_integration_tests_live_migration.sh  run_integration_tests_rate_limiter.sh  run_integration_tests_vfio.sh  run_integration_tests_windows_aarch64.sh  run_integration_tests_windows_x86_64.sh  run_integration_tests_x86_64.sh  run_metrics.sh  sha1sums-x86_64  test-util.sh
src/: main.rs
test_infra/: Cargo.toml
test_infra/src/: lib.rs
tests/: integration.rs
tracer/: Cargo.toml
tracer/src/: tracer.rs
vfio/: Cargo.toml
vfio/src/: lib.rs  vfio_device.rs  vfio_pci.rs
vhost_user_block/: Cargo.toml
vhost_user_block/src/: lib.rs
vhost_user_net/: Cargo.toml
vhost_user_net/src/: lib.rs
virtio-devices/: Cargo.toml
virtio-devices/src/: balloon.rs  block.rs  console.rs  device.rs  epoll_helper.rs  iommu.rs  lib.rs  mem.rs  net.rs  pmem.rs  rng.rs  seccomp_filters.rs  vdpa.rs  watchdog.rs
virtio-devices/src/transport/: mmio.rs  pci_common_config.rs  pci_device.rs
virtio-devices/src/vhost_user/: blk.rs  fs.rs  mod.rs  net.rs
virtio-devices/src/vsock/: device.rs  mod.rs  packet.rs
virtio-devices/src/vsock/csm/: connection.rs
virtio-devices/src/vsock/unix/: muxer.rs
vm-allocator/src/: address.rs
vm-device/src/: bus.rs
vm-device/src/interrupt/: mod.rs
vm-migration/src/: lib.rs  protocol.rs
vm-virtio/: Cargo.toml
vm-virtio/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: acpi.rs  config.rs  coredump.rs  cpu.rs  device_manager.rs  device_tree.rs  gdb.rs  interrupt.rs  lib.rs  memory_manager.rs  seccomp_filters.rs  serial_manager.rs  vm.rs  vm_config.rs
vmm/src/api/: mod.rs
vmm/src/api/http/: http_endpoint.rs  mod.rs
vmm/src/api/openapi/: cloud-hypervisor.yaml
vmm/src/igvm/: igvm_loader.rs  loader.rs  mod.rs
