[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Muminul Islam<muislam@microsoft.com>"]
edition = "2018"

[features]
default = ["kvm"]
kvm = []
hyperv = []

[dependencies]
libc = "0.2.69"
devices = { path = "../devices" }
kvm-ioctls = { git = "https://github.com/cloud-hypervisor/kvm-ioctls", branch = "ch" }
kvm-bindings = { git = "https://github.com/cloud-hypervisor/kvm-bindings", branch = "ch", features = ["with-serde", "fam-wrappers"] }
vm-memory = { version = "0.2.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = { version = ">=0.5.0", features = ["with-serde"] }

[dependencies.linux-loader]
git = "https://github.com/rust-vmm/linux-loader"
features = ["elf", "bzimage"]
