[package]
authors = ["The Cloud Hypervisor Authors"]
build = "../build.rs"
edition.workspace = true
name = "vhost_user_block"
version = "0.1.0"

[features]
default = []
mshv = []
sev_snp = []

[dependencies]
block = { path = "../block" }
clap = { workspace = true, features = ["cargo", "wrap_help"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
option_parser = { path = "../option_parser" }
thiserror = { workspace = true }
vhost = { workspace = true, features = ["vhost-user-backend"] }
vhost-user-backend = { workspace = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }
