[package]
name = "vm-virtio"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[features]
default = []
mshv = []
snp = []

[dependencies]
cfg-if = "1.0.0"
hypervisor = { path = "../hypervisor" }
log = "0.4.17"
virtio-queue = "0.7.1"
vm-memory = { version = "0.10.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
