[package]
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"
name = "vm-virtio"
version = "0.1.0"

[features]
default = []
mshv = []
sev_snp = ["hypervisor"]

[dependencies]
cfg-if = "1.0.0"
hypervisor = { path = "../hypervisor", optional = true }
log = "0.4.22"
virtio-queue = "0.12.0"
vm-memory = { version = "0.14.1", features = [
  "backend-atomic",
  "backend-bitmap",
  "backend-mmap",
] }
