[package]
name = "vmm"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[features]
default = []
guest_debug = ["kvm", "gdbstub", "gdbstub_arch"]
kvm = ["hypervisor/kvm", "vfio-ioctls/kvm", "vm-device/kvm", "pci/kvm"]
mshv = ["block_util/mshv", "hypervisor/mshv", "net_util/mshv", "vfio-ioctls/mshv", "vhost_user_block/mshv", "vhost_user_net/mshv", "vm-virtio/mshv", "virtio-devices/mshv", "vm-device/mshv", "pci/mshv"]
tdx = ["arch/tdx", "hypervisor/tdx"]
snp = ["arch/snp", "block_util/snp", "hypervisor/snp","virtio-devices/snp", "vhost_user_block/snp", "vhost_user_net/snp", "vm-virtio/snp", "net_util/snp"]
tracing = ["tracer/tracing"]
igvm = ["hex", "igvm-parser", "arch/igvm", "mshv-bindings"]

[dependencies]
acpi_tables = { git = "https://github.com/rust-vmm/acpi_tables", branch = "main"  }
anyhow = "1.0.70"
cfg-if = "1.0.0"
arc-swap = "1.5.1"
arch = { path = "../arch" }
bitflags = "1.3.2"
block_util = { path = "../block_util" }
devices = { path = "../devices" }
epoll = "4.3.1"
event_monitor = { path = "../event_monitor" }
gdbstub = { version = "0.6.4", optional = true }
gdbstub_arch = { version = "0.2.4", optional = true }
hex = { version = "0.4.3", optional = true }
hypervisor = { path = "../hypervisor" }
libc = "0.2.139"
linux-loader = { version = "0.8.1", features = ["elf", "bzimage", "pe"] }
log = "0.4.17"
micro_http = { git = "https://github.com/firecracker-microvm/micro-http", branch = "main" }
net_util = { path = "../net_util" }
once_cell = "1.17.1"
option_parser = { path = "../option_parser" }
pci = { path = "../pci" }
qcow = { path = "../qcow" }
seccompiler = "0.3.0"
serde = { version = "1.0.156", features = ["rc", "derive"] }
serde_json = "1.0.96"
serial_buffer = { path = "../serial_buffer" }
signal-hook = "0.3.15"
thiserror = "1.0.39"
tracer = { path = "../tracer" }
uuid = "1.3.0"
versionize = "0.1.10"
versionize_derive = "0.1.4"
vfio-ioctls = { git = "https://github.com/rust-vmm/vfio", branch = "main", default-features = false }
vfio_user = { git = "https://github.com/rust-vmm/vfio-user", branch = "main" }
vhdx = { path = "../vhdx"}
vhost_user_block = {path = "../vhost_user_block", optional  = true}
vhost_user_net = {path = "../vhost_user_net", optional  = true}
virtio-devices = { path = "../virtio-devices" }
virtio-queue = "0.7.1"
vm-allocator = { path = "../vm-allocator" }
vm-device = { path = "../vm-device" }
vm-memory = { version = "0.10.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vm-migration = { path = "../vm-migration" }
vm-virtio = { path = "../vm-virtio" }
vmm-sys-util = { version = "0.11.0", features = ["with-serde"] }
zerocopy = { version = "0.6.1"}
igvm-parser = { path = "../../igvm-parser", optional  = true }
mshv-bindings = { git = "https://github.com/rust-vmm/mshv", branch = "main", features = ["with-serde", "fam-wrappers"], optional  = true }
